[gd_scene load_steps=31 format=2]

[ext_resource path="res://textures/texture_07.png" type="Texture" id=1]
[ext_resource path="res://textures/texture_13.png" type="Texture" id=2]
[ext_resource path="res://font/rubik_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://world.gd" type="Script" id=4]
[ext_resource path="res://robotic_arm.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/rubik_48.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/thread_pool/thread_pool.gd" type="Script" id=7]
[ext_resource path="res://addons/thread_pool/future_thread_pool.gd" type="Script" id=8]
[ext_resource path="res://threshold.shader" type="Shader" id=9]
[ext_resource path="res://drawingLayer.gd" type="Script" id=10]

[sub_resource type="SphereMesh" id=19]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 0.45098, 0.733333, 0.294118, 1 )
emission_enabled = true
emission = Color( 0.360784, 1, 0.184314, 1 )
emission_energy = 12.35
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.988235, 0.105882, 0.0156863, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 20, 2, 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.34902, 0.34902, 0.34902, 1 )
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 11, 9, 1 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -10, 1, 1, 10, 1, -1, 10, 1, 1, -10, 1, -1, -10, -1, 1, 10, -1, -1, 10, -1, 1, -10, -1, -1, 10, 1, 1, -10, 1, -1, 10, 1, -1, -10, 1, 1, 10, -1, 1, -10, -1, -1, 10, -1, -1, -10, -1, 1, 10, 1, 1, -10, -1, 1, -10, 1, 1, 10, -1, 1, 10, 1, -1, -10, -1, -1, -10, 1, -1, 10, -1, -1 )

[sub_resource type="CubeMesh" id=6]
flip_faces = true
size = Vector3( 20, 8, 20 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 11, 9, 1 )

[sub_resource type="CubeMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.572549, 0.572549, 0.572549, 1 )
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 11, 9, 1 )

[sub_resource type="ConvexPolygonShape" id=10]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.545098, 0.792157, 0, 1 )
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 11, 9, 1 )

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 9 )
shader_param/threshold_val = 0.126
shader_param/ref_color = Color( 0.988235, 0.105882, 0.0156863, 1 )

[sub_resource type="ImageTexture" id=15]

[sub_resource type="Environment" id=12]
ambient_light_color = Color( 1, 0.992157, 0.992157, 1 )
tonemap_mode = 3
tonemap_exposure = 0.18
tonemap_white = 1.99
adjustment_enabled = true

[sub_resource type="GIProbeData" id=13]
bounds = AABB( -16.0196, -14.1084, -17.5549, 32.0392, 28.2168, 35.1097 )
cell_size = 0.274295
to_cell_xform = Transform( 3.64571, 0, 0, 0, 3.64571, 0, 0, 0, 3.64571, 58.4028, 51.4352, 64 )
dynamic_data = PoolIntArray( 0, 8, 128, 128, 128, 1, 0, 105, 112, 116, 0, 0, 64, 0, 96, 0, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("ComputeViewport")

[sub_resource type="Theme" id=16]

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("Room/robotic_arm/Viewport")

[node name="World" type="Spatial"]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939782, 0.341774, 0, -0.341774, 0.939782, 0, 6.83312, 9.54069 )

[node name="Room" type="Node" parent="."]

[node name="robotic_arm" parent="Room" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746528, 4.52914, 0 )

[node name="RestPosition" type="Position3D" parent="Room/robotic_arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02046, -1.70213, 0 )

[node name="Target" parent="Room/robotic_arm" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29619, -0.65404, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Room/robotic_arm/Target" index="0"]
layers = 512
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Skeleton" parent="Room/robotic_arm/Armature" index="0"]
bones/0/bound_children = [ NodePath("BoneAttachment 4") ]
bones/1/bound_children = [ NodePath("BoneAttachment 3") ]
bones/2/bound_children = [ NodePath("BoneAttachment 2") ]
bones/6/bound_children = [ NodePath("BoneAttachment") ]

[node name="BoneAttachment" parent="Room/robotic_arm/Armature/Skeleton" index="0"]
transform = Transform( 0.00275018, -0.906189, -0.422865, -0.00283818, -0.422871, 0.906185, -0.999992, -0.00129201, -0.0037349, 0.221664, -2.10607, 7.954e-08 )

[node name="FingerL" parent="Room/robotic_arm/Armature/Skeleton/BoneAttachment" index="0"]
layers = 512

[node name="BoneAttachment 2" parent="Room/robotic_arm/Armature/Skeleton" index="1"]
transform = Transform( -6.38017e-08, -0.522877, -0.852408, 4.2686e-08, -0.852408, 0.522877, -1, -3.02541e-09, 7.67046e-08, 1.09794, -0.338589, 9.13321e-08 )

[node name="Arm2" parent="Room/robotic_arm/Armature/Skeleton/BoneAttachment 2" index="0"]
layers = 512

[node name="BoneAttachment 3" parent="Room/robotic_arm/Armature/Skeleton" index="2"]
transform = Transform( 7.96211e-08, 0.5409, -0.841087, -2.29208e-09, -0.841087, -0.5409, -1, 4.49949e-08, -6.57284e-08, 0, 1.36867, 0 )

[node name="Arm1" parent="Room/robotic_arm/Armature/Skeleton/BoneAttachment 3" index="0"]
layers = 512

[node name="BoneAttachment 4" parent="Room/robotic_arm/Armature/Skeleton" index="3"]
transform = Transform( 0, 0, -1, 0, -1, 0, -1, 0, 0, 0, 2.3183, 0 )

[node name="FingerR" parent="Room/robotic_arm/Armature/Skeleton" index="4"]
layers = 512

[node name="Viewport" parent="Room/robotic_arm" index="4"]
size = Vector2( 128, 128 )

[node name="Camera" parent="Room/robotic_arm/Viewport" index="0"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.0016253, 3.37734, 0 )
cull_mask = 523775

[node name="ReferenceObject" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.687, 2.1879, -0.0262885 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Objects" type="Node" parent="Room"]

[node name="Conveyor" type="StaticBody" parent="Room"]
constant_linear_velocity = Vector3( 0, 0, 2 )

[node name="ConveyorMesh" type="MeshInstance" parent="Room/Conveyor"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 1.04713, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Conveyor"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 1.04713, 0 )
shape = SubResource( 5 )

[node name="Room" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.73673, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Table" type="StaticBody" parent="Room"]

[node name="MeshInstance" type="MeshInstance" parent="Room/Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99685, 1.05242, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99685, 1.05242, 0 )
shape = SubResource( 10 )

[node name="PickedTable" type="StaticBody" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.994, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Room/PickedTable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99685, 1.05242, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Room/PickedTable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99685, 1.05242, 0 )
shape = SubResource( 10 )

[node name="Spawner" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00159383, 5.53625, -9.00026 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="SpawnPoint" type="Position3D" parent="Room/Spawner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.09869, 0 )

[node name="SpawnPoint2" type="Position3D" parent="Room/Spawner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.55921, -1.09869, 0.721757 )

[node name="SpawnPoint3" type="Position3D" parent="Room/Spawner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.481372, -1.09869, 0.668218 )

[node name="SpawnIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ComputeViewport" type="Viewport" parent="."]
size = Vector2( 128, 128 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1

[node name="BinarizedImageShader" type="TextureRect" parent="ComputeViewport"]
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 15 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 0.831062, 0.55618, 0, -0.55618, 0.831062, 0, 7.20934, 6.16789 )

[node name="GIProbe" type="GIProbe" parent="WorldEnvironment"]
extents = Vector3( 16.0196, 14.1084, 17.5549 )
data = SubResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -216.0
margin_top = 17.0
margin_right = 216.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
text = "X FPS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -117.0
margin_right = 342.0
margin_bottom = -5.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 6.0
margin_right = 327.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
text = "REFERENCE COLOR"
align = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 48.0
margin_right = 327.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.0980392, 1 )
text = "CHANGE COLOR"
color = Color( 0.988235, 0.105882, 0.0156863, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -265.0
margin_top = -885.0
margin_right = -12.0
margin_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.341176, 0.341176, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -226.0
margin_top = -875.0
margin_right = -3.0
margin_bottom = -16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_right = 223.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2/VBoxContainer4"]
margin_right = 223.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SHADER VIEWPORT"
autowrap = true

[node name="BinarizedImageShader" type="TextureRect" parent="CanvasLayer/VBoxContainer2/VBoxContainer4"]
material = SubResource( 14 )
margin_top = 83.0
margin_right = 223.0
margin_bottom = 222.0
rect_min_size = Vector2( 223, 139 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 18 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_top = 226.0
margin_right = 223.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2/VBoxContainer3"]
margin_right = 223.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BINARIZED VIEW SHADER"
autowrap = true

[node name="BinarizedImageShader" type="TextureRect" parent="CanvasLayer/VBoxContainer2/VBoxContainer3"]
material = SubResource( 14 )
margin_top = 83.0
margin_right = 223.0
margin_bottom = 222.0
rect_min_size = Vector2( 223, 139 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 15 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_top = 452.0
margin_right = 223.0
margin_bottom = 674.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2/VBoxContainer2"]
margin_right = 223.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BINARIZED VIEW (CPU)"
autowrap = true

[node name="BinarizedImage" type="TextureRect" parent="CanvasLayer/VBoxContainer2/VBoxContainer2"]
margin_top = 83.0
margin_right = 223.0
margin_bottom = 222.0
rect_min_size = Vector2( 223, 139 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 15 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_top = 678.0
margin_right = 223.0
margin_bottom = 859.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_right = 223.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ARM VIEW"
autowrap = true

[node name="ArmCameraView" type="TextureRect" parent="CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 223.0
margin_bottom = 181.0
rect_min_size = Vector2( 223, 139 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 16 )
texture = SubResource( 17 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawingLayer" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreadPool" type="Node" parent="."]
script = ExtResource( 7 )

[node name="FutureThreadPool" type="Node" parent="."]
script = ExtResource( 8 )
use_signals = true
[connection signal="timeout" from="SpawnIntervalTimer" to="." method="_on_SpawnIntervalTimer_timeout"]
[connection signal="color_changed" from="CanvasLayer/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="task_finished" from="ThreadPool" to="." method="_on_ThreadPool_task_finished"]
[connection signal="task_completed" from="FutureThreadPool" to="." method="_on_FutureThreadPool_task_completed"]

[editable path="Room/robotic_arm"]
